fix progress bar

--- a/src/ui/import_settings.html
+++ b/src/ui/import_settings.html
@@ -95,8 +95,8 @@
         Please, select one of the existing datasets
     </div>
 
-    <div v-if="data.progressName" class="mt10">
-        <div>{{data.progressName}}: {{data.currentProgressLabel}} / {{data.totalProgressLabel}}</div>
-        <el-progress :percentage="Math.round(data.currentProgress * 100 / data.totalProgress)"></el-progress>
+    <div v-if="data.progressName1" class="mt10">
+        <div>{{data.progressName1}}: {{data.currentProgressLabel1}} / {{data.totalProgressLabel1}}</div>
+        <el-progress :percentage="Math.round(data.currentProgress1 * 100 / data.totalProgress1)"></el-progress>
     </div>
 </sly-card>
