--- a/src/ui/preview_data.html
+++ b/src/ui/preview_data.html
@@ -1,11 +1,10 @@
 <sly-card class="mt10"
           :title="`1. Preview CSV file: ${state.fileName}`">
-    <sly-table :content="data.table">
-    </sly-table>
-    <div>
-        <p><strong>CSV File stats:</strong></p>
-        <p>• Unique Images: {{ state.uniqueImagesLen }}</p>
-        <p>• Duplicate Images: {{ state.duplicateImagesLen }}</p>
-        <p>• Unique Tags: {{ state.uniqueTagsLen }}</p>
-    </div>
+    <sly-table :content="data.table" :options="{perPage: 20, pageSizes: [10, 20, 30, 50, 100]}"/>
+        <div>
+            <p><strong>CSV File stats:</strong></p>
+            <p>• Unique Images: {{ state.uniqueImagesLen }}</p>
+            <p>• Duplicate Images: {{ state.duplicateImagesLen }}</p>
+            <p v-if="state.uniqueTagsLen > 0">• Unique Tags: {{ state.uniqueTagsLen }}</p>
+        </div>
 </sly-card>
