--- a/src/ui/import_settings.html
+++ b/src/ui/import_settings.html
@@ -90,7 +90,7 @@
                            (state.dstDatasetMode === 'newDataset' && state.dstDatasetName.length === 0) ||
                            (state.dstDatasetMode === 'existingDataset' && !state.selectedDatasetName)
                            "
-            @click="data.processing = true; command('process')">
+            @click="data.processing = true; data.finished = false; command('process')">
         <i class="zmdi zmdi-play mr5"></i> Start import
     </el-button>
     <div class="mt5" v-if="state.dstProjectMode === 'newProject' && state.dstProjectName.length === 0"
@@ -112,4 +112,12 @@
         <div>{{data.progressName1}}: {{data.currentProgressLabel1}} / {{data.totalProgressLabel1}}</div>
         <el-progress :percentage="Math.round(data.currentProgress1 * 100 / data.totalProgress1)"></el-progress>
     </div>
+    <br>
+    <br>
+    <sly-field v-if="data.finished === true" title=""
+               description="New project has been successfully created">
+        <a slot="title" target="_blank" :href="`/projects/${data.resultProjectId}/datasets`">{{data.resultProject}}</a>
+        <sly-icon slot="icon" :options="{ imageUrl: `${data.resultProjectPreviewUrl}` }"/>
+    </sly-field>
+
 </sly-card>
