--- a/src/ui/preview_data.html
+++ b/src/ui/preview_data.html
@@ -1,9 +1,9 @@
 <sly-card class="mt10"
           :title="`1. Preview CSV file: ${state.fileName}`">
     <sly-table :content="data.table" :options="{perPage: 20, pageSizes: [10, 20, 30, 50, 100]}"/>
-        <div>
-            <p><strong>CSV File stats:</strong></p>
-            <p>• Total Images: {{ state.totalImagesLen }}</p>
-            <p v-if="state.totalTagsLen > 0">• Total Tags: {{ state.totalTagsLen }}</p>
+        <div style="margin-bottom: 0;">
+            <p style="margin-bottom: 0;"><strong>CSV File stats:</strong></p>
+            <p style="margin-bottom: 0;">• Total Images: {{ state.totalImagesLen }}</p>
+            <p style="margin-bottom: 0;" v-if="state.totalTagsLen > 0">• Total Tags: {{ state.totalTagsLen }}</p>
         </div>
 </sly-card>
