--- a/src/modal.html
+++ b/src/modal.html
@@ -1,23 +1,17 @@
 <div>
-  <p>CSV file examples</p>
+  <b>CSV file examples</b>
   <div class="fflex">
     <div class="mr5" style="width: 50%">
-      <b>Import images from Team Files:</b>
+      Import images from Team Files:
       <pre class="language-csv"><code class="language-csv">path
 /img_01.jpeg
-/dogs/img_02.jpeg
-/horses/img_01.jpeg
-/horses/img_02.jpeg
-            </code></pre>
+/dogs/img_02.jpeg</code></pre>
     </div>
     <div style="width: 50%">
-      <b>Import images by URLs:</b>
+      Import images by URLs:
       <pre class="language-csv"><code class="language-csv">url
 https://images.io/image_1.png
-https://images.io/image_2.png
-https://images.io/image_3.png
-https://images.io/image_4.png
-            </code></pre>
+https://images.io/image_2.png</code></pre>
     </div>
   </div>
   <div class="mt10">
