--- a/src/modal.html
+++ b/src/modal.html
@@ -15,7 +15,7 @@ https://images.io/image_2.png</code></pre>
     </div>
   </div>
   <div class="mt10">
-    <sly-field title="Read app overview for more information about:">
+    <sly-field title="Read more in the app overview:"></sly-field>
       <div class="fflex">
         <sly-icon
           :options="{'className': 'zmdi zmdi-label', 'color': '#009aff', 'bgColor': 'transparent'}"
